# xrl-playbox

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  pages.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/i18n/: en.json  es.json  ja.json  zh-CN.json
src/components/: AchievementDialog.vue  AchievementToast.vue  AppShell.vue  Md3Components.ts
src/composables/: useAchievement.ts  useStorage.ts  useWindowAspectRatio.ts
src/games/: index.ts
src/games/deal/: DealBanker.ts  DealEngine.ts
src/games/minimonopoly/: MiniMonopolyEngine.ts  types.ts
src/games/sokoban/: SokobanEngine.ts  SokobanGenerator.ts
src/games/wordsearch/: WordSearchEngine.ts  types.ts  words.ts
src/router/: index.ts
src/stores/: useAchievementStore.ts  useDealStore.ts  useSettingsStore.ts  useSokobanStore.ts
src/types/: index.ts
src/views/: AchievementsView.vue  DealOrNoDealView.vue  HomeView.vue  MiniMonopolyView.vue  SelfTestView.vue  SettingsView.vue  SokobanView.vue  TypingView.vue  WordSearchView.vue
